<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:id="@+id/list_single_test_type"
        android:defaultValue="PHOTO"
        android:entries="@array/array_single_test_types"
        android:entryValues="@array/array_single_test_type_values"
        android:key="@string/settings_single_test_type_key"
        android:summary="%s"
        android:title="@string/settings_single_test_type_title"
        app:iconSpaceReserved="false" />

    <ListPreference
        android:id="@+id/list_single_test_api"
        android:defaultValue="Camera2"
        android:entries="@array/array_settings_api"
        android:entryValues="@array/array_settings_api"
        android:key="@string/settings_single_test_api_key"
        android:summary="%s"
        android:title="@string/settings_single_test_api_title"
        app:iconSpaceReserved="false" />

    <ListPreference
        android:id="@+id/list_single_test_focus"
        android:defaultValue="Auto"
        android:entries="@array/array_settings_focus"
        android:entryValues="@array/array_settings_focus"
        android:key="@string/settings_single_test_focus_key"
        android:summary="%s"
        android:title="@string/settings_single_test_focus_title"
        app:iconSpaceReserved="false" />

    <ListPreference
        android:id="@+id/list_single_test_imagesize"
        android:defaultValue="Max"
        android:entries="@array/array_settings_imagesize"
        android:entryValues="@array/array_settings_imagesize"
        android:key="@string/settings_single_test_imagesize_key"
        android:summary="%s"
        android:title="@string/settings_single_test_imagesize_title"
        app:iconSpaceReserved="false" />

    <ListPreference
        android:id="@+id/list_single_test_camera"
        android:key="@string/settings_single_test_camera_key"
        android:summary="%s"
        android:title="@string/settings_single_test_camera_title"
        app:iconSpaceReserved="false" />

    <ListPreference
        android:id="@+id/list_numtests"
        android:defaultValue="30"
        android:entries="@array/array_numtests"
        android:entryValues="@array/array_numtests"
        android:key="@string/settings_numtests_key"
        android:summary="%s"
        android:title="@string/settings_numtests_title"
        app:iconSpaceReserved="false" />
    <!--    android:summary="@string/settings_numtests_summary" -->
    <!--        android:summary="@string/settings_previewbuffer_summary" -->

    <ListPreference
        android:id="@+id/list_previewbuffer"
        android:defaultValue="1500"
        android:entries="@array/array_previewbuffer"
        android:entryValues="@array/array_previewbuffer"
        android:key="@string/settings_previewbuffer_key"
        android:summary="%s"
        android:title="@string/settings_previewbuffer_title"
        app:iconSpaceReserved="false" />

    <CheckBoxPreference
        android:id="@+id/checkbox_autodelete"
        android:defaultValue="true"
        android:key="@string/settings_autodelete_key"
        android:summaryOff="@string/settings_autodelete_summary_off"
        android:summaryOn="@string/settings_autodelete_summary"
        android:title="@string/settings_autodelete_title"
        app:iconSpaceReserved="false" />

</PreferenceScreen>